--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -57,7 +57,7 @@
 	<h2 id="ultimaActualizacion">PRECIOS FINALES / Oct 2020</h2>	
 	
 </div>
-<section class="container-fluid ">
+<!-- <section class="container-fluid ">
 	<div class="intro-wrap col-sm-12">
        	<div class="container-fluid"><h1 id="titulo">OFERTAS</h1>			</div>	
 		   <div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA. 12 DE CADA OFERTA</h1></div> 
@@ -76,7 +76,7 @@
 			</div>
 		</div> 
 	</div>
-</section>
+</section> -->
 
 
 <section class="container-fluid">
@@ -89,14 +89,16 @@
 					  <div class="col-3 col-sm-3 ofertaFiltro" id="plantilla7" >
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
-							<h5 class="detalle"></h5>
+							<h5 class="detalle" id="descripcionFiltros"></h5>
 							<img class="imagenKit">
 							<h2 class="precio"></h2>
 						  </div>
 					</div>	  
+					 
 			</div> 
 		</div>
 	</div>  
+	<div class="container-fluid"><h1 id="promoDelMes">COMPRA MINIMA: 36 filtros surtidos // Llevando 48 1 remera de regalo</h1></div> 
 </div>
 </section>
 
@@ -109,10 +111,10 @@
 			<div class="container-fluid">  
 				<div class="container-fluid  competencias kits" style="justify-content: left;" >
 					<div class="row">
-					  	<div class="col-4 col-sm-3 kit" id="plantilla2">
+					  	<div class="col-3 col-sm-3 kit" id="plantilla2">
 						  	<div class="rectanguloOferta">
 								<h2 class="titulo"></h2>
-								<h5 class="detalle"></h5>
+								<h5 class="detalle" id="descripcionKit"></h5>
 								<img class="imagenKit">
 								<h2 class="precio"></h2>
 						  	</div>
@@ -126,7 +128,7 @@
 
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12 negro">
-			<div class="container-fluid"><h1 id="titulo">VALVOLINE</h1></div>	
+			<div class="container-fluid"><h1 id="titulo">VALVOLINE ACEITE</h1></div>	
 			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias valvolineOfertas" style="justify-content: left;" >
@@ -134,7 +136,30 @@
 					  <div class="col-3 col-sm-3 valvoline" id="plantilla3">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
-							<h5 class="detalle"></h5>
+							<h5 class="detalle" id="descripcionValvoline"></h5>
+							<img class="imagenKit">
+							<h2 class="precio"></h2>
+						  </div>
+					</div>
+				  
+			</div> 
+		</div>
+	</div>  
+</div>
+</section>
+
+
+<section class="container-fluid">
+	<div class="intro-wrap col-sm-12 negro">
+			<div class="container-fluid"><h1 id="titulo">VALVOLINE VARIOS</h1></div>	
+			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
+		<div class="container-fluid">  
+			<div class="container-fluid  competencias valvolineOfertasVarios" style="justify-content: left;" >
+				<div class="row">
+					  <div class="col-3 col-sm-3 valvolineVarios" id="plantilla8">
+						  <div class="rectanguloOferta">
+							<h2 class="titulo"></h2>
+							<h5 class="detalle" id="descripcionValvolineVarios"></h5>
 							<img class="imagenKit">
 							<h2 class="precio"></h2>
 						  </div>
@@ -154,7 +179,7 @@
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias motulOfertas" style="justify-content: left;" >
 				<div class="row">
-					  <div class="col-4 col-sm-3 motul" id="plantilla4">
+					  <div class="col-3 col-sm-3 motul" id="plantilla4">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
@@ -170,6 +195,14 @@
 </section>
 
 
+
+
+
+
+
+
+
+<!-- 
 <section class="container-fluid ">
 	<div class="intro-wrap col-sm-12 negro">
 			<div class="container-fluid"><h1 id="titulo">TOTAL<h1></div>	
@@ -190,11 +223,11 @@
 		</div>
 	</div>  
 </div>
-</section>
+</section> -->
 
 
 
-<section class="container-fluid blanco">
+<!-- <section class="container-fluid blanco">
 	<div class="intro-wrap col-sm-12">
 			<div class="container-fluid"><h1 id="titulo">SELENIA<h1></div>	
 			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
@@ -214,7 +247,7 @@
 		</div>
 	</div>  
 </div>
-</section>
+</section> -->
 
 
 </body>
