--- a/views/css/listaEspecifica2.css
+++ b/views/css/listaEspecifica2.css
@@ -111,17 +111,18 @@ td, th{
 		display:none;
     }
     
-    tr > td > div >  div:first-child{
+    tr > td > div >  div:first-child >span{
         font-weight: bold;
+        color: white;
+        background-color:rgb(98, 98, 98);
         font-size: 1.8rem;
-        text-decoration: underline ;
     }
      tr > td > div >  div:nth-child(5){
         font-weight: bold;
         font-style: italic;
     } 
     tr > td > div >  div:nth-child(2){
-        font-size: 1rem;
+        font-size: 1.3rem;
     } 
     
   }
