--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -97,8 +97,23 @@
 					 
 			</div> 
 		</div>
+		<div class="container-fluid competencias ofertFiltro" id="contenedorPromo" >
+			<div class="col-8" style="margin:0px;letter-spacing: 0;">
+			<h3 style="text-decoration: underline;">COMPRA MINIMA</h3>
+			<h4>24 unidades surtidas</h4>
+			<h3 style="text-decoration: underline;">PROMO DEL MES</h3>
+			<h4>Llevando 36 undiades 1 remera de regalo</h4>
+			</div>
+			<div class="col-4" >
+				<img  style="height:15vh" src="https://i.ibb.co/jvNQ8TR/promo-Filtros.jpg">
+				</div>
+		</div>
 	</div>  
-	<div class="container-fluid"><h1 id="promoDelMes">COMPRA MINIMA: 36 filtros surtidos // Llevando 48 1 remera de regalo</h1></div> 
+	<div class="container-fluid">
+	
+	</div>
+	
+
 </div>
 </section>
 
@@ -111,7 +126,7 @@
 			<div class="container-fluid">  
 				<div class="container-fluid  competencias kits" style="justify-content: left;" >
 					<div class="row">
-					  	<div class="col-3 col-sm-3 kit" id="plantilla2">
+					  	<div class="col-3 col-sm-2 kit" id="plantilla2">
 						  	<div class="rectanguloOferta">
 								<h2 class="titulo"></h2>
 								<h5 class="detalle" id="descripcionKit"></h5>
