aramdno el footrer para las rpomos del mes con iamgen

--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -81,8 +81,14 @@
 
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12 negro">
-			<div class="container-fluid"><h1 id="titulo">FILTROS</h1></div>	
-			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: 48 filtros surtidos</h1></div> 	 	
+			<div class="container-fluid">
+				<div id="titulo">
+					<h1 style="z-index:10;" >FILTROS</h1>
+					<h2 style="z-index:10;" id="compraMinima">Compra Minima:24 undiades</h2>
+				</div>
+				
+			</div>	
+			<div class="container-fluid"><h1 id="subtitulo">.</h1></div> 	 	
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias ofertaFiltros" style="justify-content: left;" >
 				<div class="row">
@@ -97,19 +103,27 @@
 					 
 			</div> 
 		</div>
-		<div class="container-fluid competencias ofertFiltro" id="contenedorPromo" >
-			<div class="col-8" style="margin:0px;letter-spacing: 0;">
-			<h3 style="text-decoration: underline;">COMPRA MINIMA</h3>
-			<h4>24 unidades surtidas</h4>
-			<h3 style="text-decoration: underline;">PROMO DEL MES</h3>
-			<h4>Llevando 36 undiades 1 remera de regalo</h4>
-			</div>
-			<div class="col-4" >
+		<div class=" competencias ofertFiltro" id="contenedorPromo" >
+			
+			<!-- <div class="col-4" >
 				<img  style="height:15vh" src="https://i.ibb.co/jvNQ8TR/promo-Filtros.jpg">
-				</div>
-		</div>
+			</div> -->
+			<!-- <div class="col-8" style="margin:0px;letter-spacing: 0;">
+				<h3 style="text-decoration: underline;">COMPRA MINIMA : 24 unidades</h3>
+			</div>
+			 -->
+			
+
+			<div id="footer" >
+				<img id ="imagenPromo" src="https://i.ibb.co/rHRncjT/promo-Filtros.jpg">
+				<h1>Llevando 48 unidadades </br>1 remera de regalo </br><h3 id="agrandarImagen" style="color:orange">Click en imagen para agrandar</h3></h1>
+			</div>	
+				
+		
+		
+		</div>		
 	</div>  
-	<div class="container-fluid">
+	<div class="container-fluid"></div>
 	
 	</div>
 	
