pomos para todas las marcas

--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -104,23 +104,10 @@
 			</div> 
 		</div>
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
-			
-			<!-- <div class="col-4" >
-				<img  style="height:15vh" src="https://i.ibb.co/jvNQ8TR/promo-Filtros.jpg">
-			</div> -->
-			<!-- <div class="col-8" style="margin:0px;letter-spacing: 0;">
-				<h3 style="text-decoration: underline;">COMPRA MINIMA : 24 unidades</h3>
-			</div>
-			 -->
-			
-
 			<div id="footer" >
-				<img id ="imagenPromo" src="https://i.ibb.co/rHRncjT/promo-Filtros.jpg">
-				<h1>Llevando 48 unidadades </br>1 remera de regalo </br><h3 id="agrandarImagen" style="color:orange">Click en imagen para agrandar</h3></h1>
+				<img id ="imagenPromo" src="https://i.ibb.co/80HQPxj/promo-Filtros.jpg">
+				<h1>Llevando 48 unidadades </br>1 remera de regalo </h1>
 			</div>	
-				
-		
-		
 		</div>		
 	</div>  
 	<div class="container-fluid"></div>
@@ -135,8 +122,14 @@
  
 	<section class="container-fluid">
 		<div class="intro-wrap col-sm-12">
-				<div class="container-fluid"><h1 id="titulo">KIT FILTROS</h1></div>	
-				<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: 6 KITS SURTIDOS</h1></div> 	 	
+			<div class="container-fluid">
+				<div id="titulo">
+					<h1 style="z-index:10;" >FILTROS</h1>
+					<h2 style="z-index:10;" id="compraMinima">Compra Minima:6 kits surtidos</h2>
+				</div>
+				
+			</div>		 
+			<div class="container-fluid"><h1 id="subtitulo">.</h1></div> 	 		
 			<div class="container-fluid">  
 				<div class="container-fluid  competencias kits" style="justify-content: left;" >
 					<div class="row">
@@ -150,6 +143,14 @@
 						</div>	  
 				</div> 
 			</div>
+			<div class=" competencias ofertFiltro" id="contenedorPromo" >
+				<div id="footer" >
+					<img id="imagenPromo" src="https://i.ibb.co/j6JsD4D/kit-Filtros.jpg">
+					<h1>Todos los kits vienen   </br>con caja de presentación</h1>
+				</div>	
+			</div>		
+		</div>  
+		<div class="container-fluid"></div>
 		</div>  
 	</div>
 </section>
@@ -157,8 +158,15 @@
 
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12 negro">
-			<div class="container-fluid"><h1 id="titulo">VALVOLINE ACEITE</h1></div>	
-			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
+		<div class="container-fluid">
+			<div id="titulo">
+				<h1 style="z-index:10;" >VALVOLINE LUBRICANTES</h1>
+				<h2 style="z-index:10;" id="compraMinima">Compra Minima: Caja Cerrada</h2>
+			</div>
+			
+		</div>		 
+		<div class="container-fluid"><h1 id="subtitulo">.</h1></div> 	
+		<div class="container-fluid">  
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias valvolineOfertas" style="justify-content: left;" >
 				<div class="row">
@@ -173,6 +181,14 @@
 				  
 			</div> 
 		</div>
+		<div class=" competencias ofertFiltro" id="contenedorPromo" >
+			<div id="footer" >
+				<img id="imagenPromo" src="https://i.ibb.co/ysVvH3h/promo-Valvo.jpg">
+				<h1> </br>Comprando 3 cajas de Advance cualquiera</br> 10%Off + 12 termos + 1 campera</h1>
+			</div>	
+		</div>		
+	</div>  
+	<div class="container-fluid"></div>
 	</div>  
 </div>
 </section>
@@ -180,8 +196,14 @@
 
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12 negro">
-			<div class="container-fluid"><h1 id="titulo">VALVOLINE VARIOS</h1></div>	
-			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
+		<div class="container-fluid">
+			<div id="titulo">
+				<h1 style="z-index:10;" >VALVOLINE VARIOS</h1>
+				<h2 style="z-index:10;" id="compraMinima">Compra Minima: Caja Cerrada</h2>
+			</div>
+			
+		</div>		 
+		<div class="container-fluid"><h1 id="subtitulo">.</h1></div> 	
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias valvolineOfertasVarios" style="justify-content: left;" >
 				<div class="row">
@@ -196,6 +218,14 @@
 				  
 			</div> 
 		</div>
+		<div class=" competencias ofertFiltro" id="contenedorPromo" >
+			<div id="footer" >
+				<img id="imagenPromo" src="https://i.ibb.co/84WNjqC/promo-Valvoline-Varios.jpg">
+				<h1>Comrpando 4 cajas surtidas </br>5% Off + 6 gorras</h1>
+			</div>	
+		</div>		
+	</div>  
+	<div class="container-fluid"></div>
 	</div>  
 </div>
 </section>
@@ -203,8 +233,14 @@
 
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12">
-			<div class="container-fluid"><h1 id="titulo">MOTUL<h1></div>	
-			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
+		<div class="container-fluid">
+			<div id="titulo">
+				<h1 style="z-index:10;" >MOTUL</h1>
+				<h2 style="z-index:10;" id="compraMinima">Compra Minima: Caja Cerrada</h2>
+			</div>
+			
+		</div>		 
+		<div class="container-fluid"><h1 id="subtitulo">.</h1></div> 	
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias motulOfertas" style="justify-content: left;" >
 				<div class="row">
@@ -219,6 +255,14 @@
 				  
 			</div> 
 		</div>
+		<div class=" competencias ofertFiltro" id="contenedorPromo" >
+			<div id="footer" >
+				<img id="imagenPromo" src="https://i.ibb.co/XsMN1Y6/promo-Motul.jpg">
+				<h1>Llevando 3 cajas iguales </br>1 bidon sin cargo  + caja herramientas</h1>
+			</div>	
+		</div>		
+	</div>  
+	<div class="container-fluid"></div>
 	</div>  
 </div>
 </section>
