--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -53,7 +53,7 @@
 <!-- SECCION DE LISTAS
 ================================================== -->
 <div class="container-fluid cabecera"> 
-	<h1 id="nombreLista">Ofertas Vigentes</h1>
+	<h1 id="nombreLista titulo">Ofertas Vigentes</h1>
 	<h2 id="ultimaActualizacion">PRECIOS FINALES / Oct 2020</h2>	
 	
 </div>
@@ -105,7 +105,7 @@
 		</div>
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
-				<img id ="imagenPromo" src="https://i.ibb.co/80HQPxj/promo-Filtros.jpg">
+				<img id ="imagenPromo" src="https://i.ibb.co/hcTkNgV/promo-Filtros.jpg">
 				<h1>Llevando 48 unidadades </br>1 remera de regalo </h1>
 			</div>	
 		</div>		
@@ -184,7 +184,7 @@
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/ysVvH3h/promo-Valvo.jpg">
-				<h1> </br>Comprando 3 cajas de Advance cualquiera</br> 10%Off + 12 termos + 1 campera</h1>
+				<h1> Comprando 3 cajas de Advance (cualquiera)</br> 10%Off + 12 termos + 1 campera</h1>
 			</div>	
 		</div>		
 	</div>  
@@ -221,7 +221,7 @@
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/84WNjqC/promo-Valvoline-Varios.jpg">
-				<h1>Comrpando 4 cajas surtidas </br>5% Off + 6 gorras</h1>
+				<h1>Comrpando 4 cajas surtidas </br>5% Off + 3 gorras</h1>
 			</div>	
 		</div>		
 	</div>  
