--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -84,7 +84,7 @@
 			<div class="container-fluid">
 				<div id="titulo">
 					<h1 style="z-index:10;" >FILTROS</h1>
-					<h2 style="z-index:10;" id="compraMinima">Compra Minima:24 undiades</h2>
+					<h2 style="z-index:10;" id="compraMinima">Compra Mínima:24 unidades</h2>
 				</div>
 				
 			</div>	
@@ -106,7 +106,7 @@
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id ="imagenPromo" src="https://i.ibb.co/hcTkNgV/promo-Filtros.jpg">
-				<h1>Llevando 48 unidadades </br>1 remera de regalo </h1>
+				<h1>Llevando 48 unidades </br>2 remeras de regalo </h1>
 			</div>	
 		</div>		
 	</div>  
@@ -125,7 +125,7 @@
 			<div class="container-fluid">
 				<div id="titulo">
 					<h1 style="z-index:10;" >FILTROS</h1>
-					<h2 style="z-index:10;" id="compraMinima">Compra Minima:6 kits surtidos</h2>
+					<h2 style="z-index:10;" id="compraMinima">Compra mínima:6 kits surtidos</h2>
 				</div>
 				
 			</div>		 
@@ -161,7 +161,7 @@
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >VALVOLINE LUBRICANTES</h1>
-				<h2 style="z-index:10;" id="compraMinima">Compra Minima: Caja Cerrada</h2>
+				<h2 style="z-index:10;" id="compraMinima">Compra mínima: Caja Cerrada</h2>
 			</div>
 			
 		</div>		 
@@ -184,7 +184,7 @@
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/ysVvH3h/promo-Valvo.jpg">
-				<h1> Comprando 3 cajas de Advance (cualquiera)</br> 10%Off + 12 termos + 1 campera</h1>
+				<h1> Comprando 3 cajas de Advanced (Cualquiera)</br> 10%Off + 12 termos + 1 campera</h1>
 			</div>	
 		</div>		
 	</div>  
@@ -199,7 +199,7 @@
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >VALVOLINE VARIOS</h1>
-				<h2 style="z-index:10;" id="compraMinima">Compra Minima: Caja Cerrada</h2>
+				<h2 style="z-index:10;" id="compraMinima">Compra mínima: Caja Cerrada</h2>
 			</div>
 			
 		</div>		 
@@ -221,7 +221,7 @@
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/84WNjqC/promo-Valvoline-Varios.jpg">
-				<h1>Comrpando 4 cajas surtidas </br>5% Off + 3 gorras</h1>
+				<h1>Comprando 4 cajas surtidas </br>5% Off + 3 gorras</h1>
 			</div>	
 		</div>		
 	</div>  
@@ -236,7 +236,7 @@
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >MOTUL</h1>
-				<h2 style="z-index:10;" id="compraMinima">Compra Minima: Caja Cerrada</h2>
+				<h2 style="z-index:10;" id="compraMinima">Compra mínima: Caja Cerrada</h2>
 			</div>
 			
 		</div>		 
