--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -184,7 +184,7 @@
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/ysVvH3h/promo-Valvo.jpg">
-				<h1> Comprando 3 cajas de Advanced (Cualquiera)</br> 10%Off + 12 termos + 1 campera</h1>
+				<h1> Comprando 3 cajas de Advanced (Cualquiera)</br> De regalo 12 termos + 1 campera</h1>
 			</div>	
 		</div>		
 	</div>  
@@ -261,6 +261,38 @@
 				<h1>Llevando 3 cajas iguales </br>1 bidon sin cargo  + caja herramientas</h1>
 			</div>	
 		</div>		
+	</div>  
+	<div class="container-fluid"></div>
+	</div>  
+</div>
+</section>
+
+
+<section class="container-fluid">
+	<div class="intro-wrap col-sm-12">
+		<div class="container-fluid">
+			<div id="titulo">
+				<h1 style="z-index:10;" >DE TODO UN POCO</h1>
+				<h2 style="z-index:10;" id="compraMinima">Compra mínima: 12 unidades surtidas</h2>
+			</div>
+			
+		</div>		 
+		<div class="container-fluid"><h1 id="subtitulo">.</h1></div> 	
+		<div class="container-fluid">  
+			<div class="container-fluid  competencias ofertasVarias" style="justify-content: left;" >
+				<div class="row">
+					  <div class="col-3 col-sm-2 ofertaVarias" id="plantilla9">
+						  <div class="rectanguloOferta">
+							<h2 class="titulo"></h2>
+						
+							<img class="imagenKit">
+							<h2 class="precio"></h2>
+						  </div>
+					</div>
+				  
+			</div> 
+		</div>
+	
 	</div>  
 	<div class="container-fluid"></div>
 	</div>  
