agrego productos varios

--- a/views/css/ofertasEstilo.css
+++ b/views/css/ofertasEstilo.css
@@ -338,6 +338,7 @@ body {
         font-size:1.2rem;
         width:60%;
         margin-left:2rem;
+        margin-right:1rem;
     }
     #imagenPromo{
         height:10rem;
