--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -295,7 +295,7 @@
 	
 	</div>  
 	<div class="container-fluid"></div>
-	</div style="height:100px;">  
+	</div style="height:100px;"> .</div>
 </div>
 </section>
 
