--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -75,6 +75,7 @@
 	<div class="competenciaPlantilla competencia">
 			<div class="card" id="card1">
 				<h2><a class="link titulo" href="listaEspecifica2.html?id="></a></h2>
+				<h3 class="mes"  style="color:rgb(211, 213, 186)"></h3>
 				<h3 class="aumento"></h3>
 			</div>
 		</div>		
