--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -184,7 +184,7 @@
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/ysVvH3h/promo-Valvo.jpg">
-				<h1> Comprando 3 cajas de Advanced (Cualquiera)</br> De regalo 12 termos + 1 campera</h1>
+				<h1> Llevando 3 cajas de Advnanced pagas $3099</br> De regalo 12 termos + 1 campera</h1>
 			</div>	
 		</div>		
 	</div>  
