alguna smodificaicoens ulitmos ajusteS

--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -106,7 +106,8 @@
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id ="imagenPromo" src="https://i.ibb.co/hcTkNgV/promo-Filtros.jpg">
-				<h1>Llevando 48 unidades </br>2 remeras de regalo </h1>
+				<h1>Llevando 48 unidades</h1>
+				<div><h1 style="color:orange;">2 remeras de regalo</h1> </div>
 			</div>	
 		</div>		
 	</div>  
@@ -161,7 +162,7 @@
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >VALVOLINE LUBRICANTES</h1>
-				<h2 style="z-index:10;" id="compraMinima">Compra mínima: Caja Cerrada</h2>
+				<h2 style="z-index:10;" id="compraMinima">Precios x caja cerrada </br> <h2 style="color:yellow">5% OFF x 3 cajas surtidas</h2> </h2>
 			</div>
 			
 		</div>		 
@@ -184,8 +185,11 @@
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/ysVvH3h/promo-Valvo.jpg">
-				<h1> Llevando 3 cajas de Advnanced pagas $3099</br> De regalo 12 termos + 1 campera</h1>
+				<h1>Llevando 4 cajas de Advanced</br> (cualquier graduacion)</h1>
+				<div><h1 style="color:orange;">Pagas $3099 + 12 termos + 1 campera</h1> </div>
 			</div>	
+
+		
 		</div>		
 	</div>  
 	<div class="container-fluid"></div>
@@ -199,7 +203,7 @@
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >VALVOLINE VARIOS</h1>
-				<h2 style="z-index:10;" id="compraMinima">Compra mínima: Caja Cerrada</h2>
+				<h2 style="z-index:10;" id="compraMinima">Precios x caja cerrada </h2>
 			</div>
 			
 		</div>		 
@@ -236,7 +240,7 @@
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >MOTUL</h1>
-				<h2 style="z-index:10;" id="compraMinima">Compra mínima: Caja Cerrada</h2>
+				<h2 style="z-index:10;" id="compraMinima">Precios x caja cerrada</h2>
 			</div>
 			
 		</div>		 
@@ -258,7 +262,7 @@
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/XsMN1Y6/promo-Motul.jpg">
-				<h1>Llevando 3 cajas iguales </br>1 bidon sin cargo  + caja herramientas</h1>
+				<h1>Llevando 3 cajas surtidas </br>5% OFF + caja herramientas</h1>
 			</div>	
 		</div>		
 	</div>  
@@ -299,6 +303,37 @@
 </div>
 </section>
 
+
+
+<section class="container-fluid">
+	<div class="intro-wrap col-sm-12">
+		<div class="container-fluid">
+			<div id="titulo">
+				<h1 style="z-index:10;" >VINTO</h1>
+				<h2 style="z-index:10;" id="compraMinima">Precios x caja cerrada de 12 unidades</h2>
+			</div>
+			
+		</div>		 
+		<div class="container-fluid"><h1 id="subtitulo">.</h1></div> 	
+		<div class="container-fluid">  
+			<div class="container-fluid  competencias ofertasVinto" style="justify-content: left;" >
+				<div class="row">
+					  <div class="col-3 col-sm-3 ofertaVinto" id="plantilla10">
+						  <div class="rectanguloOferta">
+							<h2 class="titulo"></h2>
+							<img class="imagenKit">
+							<h2 class="precio"></h2>
+						  </div>
+					</div>
+				  
+			</div> 
+		</div>
+	
+	</div>  
+	<div class="container-fluid"></div>
+	</div style="height:100px;"> .</div>
+</div>
+</section>
 
 
 
