--- a/views/css/ofertasEstilo.css
+++ b/views/css/ofertasEstilo.css
@@ -192,7 +192,7 @@ body {
     justify-content: left;;
 }
 
-#plantilla7, #plantilla1, #plantilla2, #plantilla3, #plantilla4, #plantilla5, #plantilla6, #plantilla, #plantilla8, #plantilla9{
+#plantilla7, #plantilla1, #plantilla2, #plantilla3, #plantilla4, #plantilla5, #plantilla6, #plantilla, #plantilla8, #plantilla9, #plantilla10{
   padding:1px;
 
 }
