--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -105,11 +105,16 @@
 		</div>
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
-				<img id ="imagenPromo" src="https://i.ibb.co/hcTkNgV/promo-Filtros.jpg">
-				<h1>Llevando 48 unidades</h1>
-				<div><h1 style="color:orange;">2 remeras de regalo</h1> </div>
+				<img id="imagenPromo" src="https://i.ibb.co/hcTkNgV/promo-Filtros.jpg">
+				<div style="padding-left:5rem;">
+					<h1 id="gancho">Llevando 48 unidades</h1>
+					<h1 id="recompensa" style="color:orange;">Te llevas de regalo <u style="font-weight:bold">2 remeras</u></h1> 
+				</div>
 			</div>	
-		</div>		
+		</div>
+		
+		
+
 	</div>  
 	<div class="container-fluid"></div>
 	
@@ -147,9 +152,12 @@
 			<div class=" competencias ofertFiltro" id="contenedorPromo" >
 				<div id="footer" >
 					<img id="imagenPromo" src="https://i.ibb.co/j6JsD4D/kit-Filtros.jpg">
-					<h1>Todos los kits vienen   </br>con caja de presentación</h1>
+					<div style="padding-left:5rem;">
+						<h1 id="gancho">Todos los kits vienen en </h1>
+						<h1 id="recompensa" style="color:orange;">Caja de presentacion</h1> 
+					</div>
 				</div>	
-			</div>		
+			</div>	
 		</div>  
 		<div class="container-fluid"></div>
 		</div>  
@@ -185,8 +193,10 @@
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/ysVvH3h/promo-Valvo.jpg">
-				<h1>Llevando 4 cajas de Advanced</br> (cualquier graduacion)</h1>
-				<div><h1 style="color:orange;">Pagas $3099 + 12 termos + 1 campera</h1> </div>
+				<div style="padding-left:5rem;">
+					<h1 id="gancho">Llevando 4 cajas de Advanced <br />(cualquier graduacion)</h1>
+					<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$3099</u>+12 termos +1 campera</h1> 
+				</div>
 			</div>	
 
 		
@@ -222,17 +232,27 @@
 				  
 			</div> 
 		</div>
+
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/84WNjqC/promo-Valvoline-Varios.jpg">
-				<h1>Comprando 4 cajas surtidas </br>5% Off + 3 gorras</h1>
+				<div style="padding-left:5rem;">
+					<h1 id="gancho">Comprando 4 cajas </h1>
+					<h1 id="recompensa" style="color:orange;">5%OFF + 3 gorras</h1> 
+				</div>
 			</div>	
+		</div>		
 		</div>		
 	</div>  
 	<div class="container-fluid"></div>
 	</div>  
 </div>
 </section>
+
+
+
+
+
 
 
 <section class="container-fluid">
@@ -259,12 +279,16 @@
 				  
 			</div> 
 		</div>
+
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
-				<img id="imagenPromo" src="https://i.ibb.co/XsMN1Y6/promo-Motul.jpg">
-				<h1>Llevando 3 cajas surtidas </br>5% OFF + caja herramientas</h1>
+				<img id="imagenPromo" src="https://i.ibb.co/tB4VRt6/caja-Herramientas.jpg">
+				<div style="padding-left:5rem;">
+					<h1 id="gancho">Llevando 3 cajas surtidas </h1>
+					<h1 id="recompensa" style="color:orange;">5%OFF + 1 caja herramientas</h1> 
+				</div>
 			</div>	
-		</div>		
+		</div>			
 	</div>  
 	<div class="container-fluid"></div>
 	</div>  
