--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -153,7 +153,7 @@
 				<div id="footer" >
 					<img id="imagenPromo" src="https://i.ibb.co/j6JsD4D/kit-Filtros.jpg">
 					<div style="padding-left:5rem;">
-						<h1 id="gancho">Todos los kits vienen en </h1>
+						<h1 id="gancho">Precios FINALES. Todos los kits vienen en </h1>
 						<h1 id="recompensa" style="color:orange;">Caja de presentacion</h1> 
 					</div>
 				</div>	
@@ -170,7 +170,7 @@
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >VALVOLINE LUBRICANTES</h1>
-				<h2 style="z-index:10;" id="compraMinima">Precios x caja cerrada </br> <h2 style="color:yellow">5% OFF x 3 cajas surtidas</h2> </h2>
+				<h2 style="z-index:10;" id="compraMinima">Precios FINALES x caja cerrada </br> <h2 style="color:yellow">5% OFF x 3 cajas surtidas</h2> </h2>
 			</div>
 			
 		</div>		 
@@ -213,7 +213,7 @@
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >VALVOLINE VARIOS</h1>
-				<h2 style="z-index:10;" id="compraMinima">Precios x caja cerrada </h2>
+				<h2 style="z-index:10;" id="compraMinima">Precios FINALES x caja cerrada </h2>
 			</div>
 			
 		</div>		 
@@ -260,7 +260,7 @@
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >MOTUL</h1>
-				<h2 style="z-index:10;" id="compraMinima">Precios x caja cerrada</h2>
+				<h2 style="z-index:10;" id="compraMinima">Precios FINALES x caja cerrada</h2>
 			</div>
 			
 		</div>		 
