--- a/views/css/main.css
+++ b/views/css/main.css
@@ -808,7 +808,7 @@ button.large, .button.large {
 }
 
 button.stroke, .button.stroke {
-  background: transparent !important;
+  background: transparent ;
   border: 3px solid #313131;
   line-height: 4.8rem;
 }
@@ -1628,6 +1628,7 @@ header .header-logo a {
 
 .home-content-tablecell .more .button {
   border-color: #FFFFFF;
+  background-color: rgba(255, 255, 255, 0.150);
   color: #FFFFFF;
 }
 
