--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -279,7 +279,7 @@
 				  
 			</div> 
 		</div>
-
+<!-- 
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/tB4VRt6/caja-Herramientas.jpg">
@@ -288,7 +288,7 @@
 					<h1 id="recompensa" style="color:orange;">5%OFF + 1 caja herramientas</h1> 
 				</div>
 			</div>	
-		</div>			
+		</div>			 -->
 	</div>  
 	<div class="container-fluid"></div>
 	</div>  
