--- a/views/html/faq.html
+++ b/views/html/faq.html
@@ -2,7 +2,7 @@
 <html  lang="en">
 <head>
 
-<title>Renova</title>
+<title>Abrir un lubricentro</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet"    href="../css/base.css">
