--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="format-detection" content="telephone=no">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" >
-		<title>Ofertas del mes</title>
+		<title>Ofertas del mes2</title>
 		
 		<link rel="stylesheet" type="text/css" href=	"../css/base.css">
 		<link rel="stylesheet" type="text/css" href=	"../css/vendor.css">
