--- a/views/html/faq.html
+++ b/views/html/faq.html
@@ -98,7 +98,8 @@
 	<div class="home-content-table">	
 		<div class="home-content-tablecell">
 		 <div class="row">
-				<div class="col-twelve" id="campoParrafo" style="padding:0 1rem;">			
+				<div class="col-twelve" id="campoParrafo" style="padding:0 1rem;">
+					
 				 <h3></h3>
 			   </div> <!-- end col-twelve --> 
 			</div> <!-- end row --> 
@@ -141,7 +142,10 @@
 
 </section>
 
-
+Brindamos soporte para quienes quieran entrar al mundo de los lubricentros. Mantener un stock acorde a la demanda es la clave.
+El núcleo de lubricentro se basa en el lubricante y los filtros, ademas de productoscomplementarios como son las escobillas, lámparas, etc. Los márgenes variarán de acuerdo a la ubicación del local y del tipo de cliente principalmente. el margen promedio de la mercaderia oscila entre un 40% y 60%.
+La inversión inicial estará compuesta por la mercadería (Filtros, lubricantes, etc.) y los activos fijos (Auto elevador; herramientas varias: Pistola neumática, juegos de llaves combinadas, compresor; mostrador y computadora etc.). En el caso de los filtros y los aceites, se deberá contar con más de una marca. En cuanto a los aceites, cada marca de automóviles recomienda una marca específica, y en cuanto a los filtros es necesario ofrecer filtros de primera marca y opciones mas económicas.
+El negocio alcanzará su punto de equilibrio (punto en que se cubren los costos fijos) con un promedio de 100-150 autos por mes. Esto de todas maneras presentará variaciones de acuerdo a la ubicación y al tipo de cliente como mencionado anteriormente.			
 
 </body>
 
