--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -103,7 +103,7 @@
 					 
 			</div> 
 		</div>
-		<div class=" competencias ofertFiltro" id="contenedorPromo" >
+		<!-- <div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/hcTkNgV/promo-Filtros.jpg">
 				<div style="padding-left:5rem;">
@@ -111,7 +111,7 @@
 					<h1 id="recompensa" style="color:orange;">Te llevas de regalo <u style="font-weight:bold">2 remeras</u></h1> 
 				</div>
 			</div>	
-		</div>
+		</div> -->
 		
 		
 
