--- a/views/html/listaEspecifica2.html
+++ b/views/html/listaEspecifica2.html
@@ -87,38 +87,30 @@
 
 
 <section id="seccionLista">
-
-
 	<div class="intro-wrap col-sm-12" style="height:80%;">
       		<div class="col-sm-12"></div>			 
 				<div class="container-fluid tabla" >  
 					<table	class="border-success"  style="background-color:rgb(255, 255, 255)" width=100%  id="myTable"
-							data-buttons-class="danger"
 							data-mobile-responsive="true"
-							data-search-align="left"
 							data-search="true"
-							data-search-placeholder="buscar"
+							data-search-placeholder="Buscar"
+							data-search-align="left"
 							data-show-export="true"
-							data-show-columns="true"
 							data-key-events="true"
 							data-fixed-columns="true" 
-							data-show-print="true"					 
+							data-show-print="true"				 
 							data-toolbar-align="left"
 							data-show-header="false"
 							data-group-by-field="r"
-							data-loading-template="loadingTemplate"
 							>
-							
-							<thead class="thead-dark" > 
-							
+							<thead  > 
 							  <tr> 	
 								<th data-field="id"data-width="10" data-width-unit="%" ><pan>Articulo</span>  								</span style="text-align: center;"></th> 
-								<th data-field="d" class="text-wrap">  													Descripcion			</span style="text-align: left;"> </th> 
+								<th data-field="d" >  													Descripcion			</span style="text-align: left;"> </th> 
 								<th data-field="r" data-width="20" data-width-unit="%"data-card-visible="false">  		Rubro				</span> </th> 
 								<th data-field="pf" data-width="90" data-align="center">  								UNITARIO	 		</th>  
 								<th data-field="p" data-width="90" data-align="center">  								CAJA CERRADA		</th>  
 								<th data-field="s" data-width="90" class="text-right" >     							Stock 				</span> </th> 
-							
 							  </tr> 
 						</thead> 
 					</table> 		  
@@ -126,10 +118,9 @@
 			</div>   		
 </section>
 <div class="spinner-border" role="status">
-	<span class="sr-only" style="color:black;">Loading...</span>
+	<span class="sr-only" style="color:black;">cargando...</span>
   </div>
-
-	</body>
+</body>
 
 <!-- footer
 ================================================== -->
