--- a/views/css/listaEspecifica2.css
+++ b/views/css/listaEspecifica2.css
@@ -20,13 +20,13 @@
   .cabecera{
 	
 	background-color: #000000;
-	 
+ 
 	  background-size: 100%;
 	  height:15rem;
-	  margin:0px;
-	  padding:5rem;
-	  padding-bottom:10rem;
-	  z-index:20;
+      margin:0px;
+      padding:1rem 0;
+      z-index:20;
+      margin-bottom: 0.5rem;
   }
   
   
@@ -52,7 +52,7 @@
   /*///////////////////////////////TITULO Y SIBTITULO*/
 #nombreLista{
     color:whitesmoke;
-    padding-top:3%;
+
     font-size:4em;
 }
 #ultimaActualizacion{
@@ -62,13 +62,13 @@
 
 
 #seccionLista{
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
 }
 
 /*////////////////////////////////TABEL DATA*/
 
 td, th{
-    font-size:2.5vmin;
+    font-size:1.5rem !important;
     font-family:Arial, Helvetica, sans-serif;
 
 
@@ -143,14 +143,15 @@ td, th{
 
 .search-input{
     background-color:rgba(247, 245, 245, 0.796) !important;
-    border:4px rgb(240, 146, 24) solid !important;
+    border:2px rgb(102, 102, 102) solid !important;
+
 
 }
 .fixed-table-toolbar{
     position: -webkit-sticky !important;
     position: sticky !important;
     top: 0;
-    background-color: black;
+
     z-index:10 !important;
   }
 
